<resources>
    <!-- General -->
    <string name="app_name">Pocket Chief</string>
    <string name="login">Логин (email)</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="or">или</string>
    <string name="error_duplicate_user">Пользователь с указанным адресом электронной почты уже зарегистрирован!</string>
    <string name="error_invalid_data">Пожалуйста, проверьте правильность введённых данных.</string>
    <string name="error_network_unavailable">Пожалуйста, проверьте подключение к сети.</string>
    <string name="error_incorrect_data">Неверный логин или пароль.</string>



    <!-- Welcome fragment -->
    <string name="welcome_title_text">Пора стать шеф-поваром :)</string>
    <string name="welcome_description_text">Хватит быть просто любителем, начните готовить
                                      профессиональные блюда прямо на своей кухне. А
                                      мы поможем Вам с выбором рецепта!</string>
    <string name="welcome_button_text">Продолжить</string>


    <!-- Sign in fragment -->
    <string name="sign_in_forward_password">Забыли пароль?</string>
    <string name="sign_in_with_google">Войти с помощью Google</string>
    <string name="sign_in_as_guest">Войти как гость</string>

    <!-- Registration fragment -->
    <string name="require_one">длина не менее 8 символов</string>
    <string name="require_two">только буквы лат. алфавита (a–z) и арабске цифры (0–9)</string>
    <string name="require_three">не менее 1 заглавной буквы</string>
    <string name="require_four">не менее 1 спец.символа ($&amp;.-/*)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




</resources>