<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="?attr/paddingStart"
        android:paddingEnd="?attr/paddingEnd"
        android:background="@color/orange"
        tools:context=".view.SignInFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInLayoutEmail"
            style="@style/customTextLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/login"
            app:boxStrokeColor="@color/text_input_outline_color"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEditEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInLayoutPassword"
            style="@style/customTextLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/text_input_outline_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEditPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signInForwardPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/sign_in_forward_password"
            android:textColor="@color/white_60"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/signInLayoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/signInLayoutPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_white_button"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/signInForwardPassword"
            tools:layout_editor_absoluteX="32dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signInOrTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/or"
            android:textColor="@color/white_60"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInButton" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signInWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/white_60"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInOrTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signInAsGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white_60"
            android:textSize="16sp"
            android:text="@string/sign_in_as_guest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInWithGoogle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
